--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+    apiKey: "AIzaSyDYGalnfucyZJzfkNceC0WFubSRZc4cSqk",
+    authDomain: "fichasascencao.firebaseapp.com",
+    projectId: "fichasascencao",
+    storageBucket: "fichasascencao.firebasestorage.app",
+    messagingSenderId: "471917301444",
+    appId: "1:471917301444:web:85d5a14bf6befcbab64391"
+  };
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
